[P4ADEV-131] transactions payee info partial
